Fixed a big problem

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     
     p {
       display: block;
-      width: 400px;
+      width: 600px;
       margin: 50px auto;
-      font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+      font: 40px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
     }
     #rainbow-message {
       position: absolute;
@@ -51,6 +51,8 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+
+<p>Another paragraph !!</p>
 
 <p>
   Fork me? No, fork you!
