finished the work for issue 55

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
+
+<p><strong>He oui, c'est vraiment genial. Modif from ISS 53</strong></p>
 <p>
   Fork me? No, fork you! Ein small modif
 </p>
